--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.2",
