--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "itachi",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.14.0",
     "body-parser": "^1.20.1",
     "cloudinary": "^1.33.0",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^4.6.0",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.8.2",
@@ -25,6 +29,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "sanitize-html": "^2.8.1",
     "serve-favicon": "^2.5.0",
     "uuid": "^9.0.0"
   }
